# enclave-benchmark

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  requirements.txt
.cargo/: config.toml
.github/workflows/: docs.yml  release.yml  rust.yml
dev/: Dockerfile  aggregate.py  analysis.py  generate_docs.py  pre-commit  pre-process.py  setup_env.sh  setup_host.sh
docs/: requirements.txt
docs/report-ita/: convert.sh  main.tex  output.mediawiki  refs.bib
docs/report-ita/scripts/: adjust.py
docs/source/: analysis.rst  code_docs.rst  index.rst  usage.rst
docs/web/: requirements.txt
docs/web/source/: analysis.rst  conf.py  contributing.md  contributing.rst  index.rst  inner-working.md  inner-working.rst  installation.md  installation.rst  requirements.md  requirements.rst  setup.md  setup.rst  usage.rst
docs/web/source/usage/: advanced.rst
examples/: basic.toml  demo.toml  example.toml  full.toml  iobound.toml  minimal.toml  simple.toml
examples/basic-c-app/: Makefile
examples/bonnie++/: pre_run.sh
examples/bpf/: main.c  prog.bpf.c
examples/nbody/: launch_nbody.sh
examples/simple-writer/: Makefile  main.c
src/: collector.rs  common.rs  constants.rs  main.rs  profiler.rs  stats.rs
src/bpf/: core_fixes.bpf.h  tracer.bpf.c  tracer.h  tracer.skel.rs
