[package]
name = "performance-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
handlebars = "6.3.0"
rand = "0.8.5"
rsa = "0.9.7"
tempfile = "3.15.0"
toml = "0.8.19"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.pyo3]
version = "0.23.3"
features = ["auto-initialize"]

[profile.dev.package.num-bigint-dig]
opt-level = 3
