[package]
name = "performance-analysis"
version = "0.1.0"
edition = "2021"

[build-dependencies]
libbpf-cargo = "0.24.8"
vmlinux = { version = "0.0", git = "https://github.com/libbpf/vmlinux.h.git", rev = "83a228cf37fc65f2d14e4896a04922b5ee531a94" }

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
crossbeam = "0.8.4"
duration-str = "0.12.0"
serde = { version = "1.0.217", features = ["derive"] }
handlebars = "6.3.0"
libbpf-rs = "0.24.8"
plain = "0.2"
pyo3 = { version = "0.23.3", features = ["auto-initialize"]}
rand = "0.8.5"
rsa = "0.9.7"
tempfile = "3.15.0"
toml = "0.8.19"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev.package.num-bigint-dig]
opt-level = 3
